# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = raiden-api-client
description = Python wrapper for the Raiden Network node API
author = Maximilian Langenfeld, Oliver Bünting
author-email = maxdacjs@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/raiden-network/raiden-api-client
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = True
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = requests; attrdict

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[test]
extras = True

[tool:pytest]
addopts =
    --cov raiden_api_client --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = raiden_api_client
